@@ -29,6 +29,8 @@ NOTICE: Restart wiseService before capture when upgrading
 NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading
 
 4.5.1 2023/09/xx
+  - release - fix viewer systemd file
+  - all - handle cookies encoded, bad proxy
 
 4.5.0 2023/09/13
   - release - node 16.20.2
